tests/error/override_static2.gw
// [contains] but cannot override
class C
{
	function void test() {}
}

class D extends C
{
	function static void test() {}
}
